--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     <section id="hero" class="hero">
         <div class="colors">
             <div class="sitebar">
-               <div class="sitebar__info">
+                <div class="sitebar__info">
                     <img class="sitebar__img" src="./imgs/photos-iam.jpg" alt="photo">
-                    <h2 class="sitebar__title">Xushnora</h2>
+                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+                    <div id="box">
+                        <div id="b1">/</div>
+                        <div id="text"></div>
+                        <div id="b2">/</div>
+                    </div>
                     <nav class="sitebar__nav nav">
                         <ul class="nav-list">
                             <li class="nav-item">
@@ -47,7 +52,7 @@
                         </li>
                         <li class="media__item">
                             <a class="meida__link" href="https://t.me/Xushnora_uz" target="_blank">
-                                <i class='bx bxl-telegram' ></i>
+                                <i class='bx bxl-telegram'></i>
                             </a>
                         </li>
                         <li class="media__item">
@@ -56,41 +61,42 @@
                             </a>
                         </li>
                     </ul>
-               </div>
+                </div>
             </div>
             <div class="main">
                 <div class="main__header header">
-                   <div class="header__page">
+                    <div class="header__page">
                         <a href="#">
                             <h1 class="header__title">Xushnora</h1>
                         </a>
                         <ul class="sitebar__media-list media">
                             <li class="media__item ">
-                                <a class="meida__link" href="https://facebook.com/xushnora.nishonova.1/" target="_blank">
-                                    <i class='bx bxl-facebook'></i>
+                                <a class="meida__link" href="https://facebook.com/xushnora.nishonova.1/"
+                                    target="_blank">
+                                    <i class='bx bxl-facebook head-media'></i>
                                 </a>
                             </li>
                             <li class="media__item">
                                 <a class="meida__link" href="https://instagram.com/xushnora_uz/" target="_blank">
-                                    <i class='bx bxl-instagram'></i>
+                                    <i class='bx bxl-instagram head-media'></i>
                                 </a>
                             </li>
                             <li class="media__item">
                                 <a class="meida__link" href="https://t.me/Xushnora_uz" target="_blank">
-                                    <i class='bx bxl-telegram' ></i>
+                                    <i class='bx bxl-telegram head-media'></i>
                                 </a>
                             </li>
                             <li class="media__item">
                                 <a class="meida__link" href="https://linkedin.com/feed/" target="_blank">
-                                    <i class='bx bxl-linkedin'></i>
+                                    <i class='bx bxl-linkedin head-media'></i>
                                 </a>
                             </li>
                             <li class="media__item">
                                 <button class="header__menu" id="menuBtn"><i class='bx bx-menu' id="icon"></i></button>
                             </li>
                         </ul>
-                       
-                   </div>
+
+                    </div>
                 </div>
                 <div class="main__modal modal" id="navModal">
                     <div class="modal__page">
@@ -113,14 +119,15 @@
                     </div>
                 </div>
                 <div class="main__desc">
-                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-                    <div id="box">
-                    <div id="b1">/</div><div id="text"></div><div id="b2">/</div>
-                    </div>
-                    <h2 class="main__title ttl">
-                        I'm a
-                        <span class="ttl__span">Xushnora</spa>
-                    </h2>
+                    <span class="main__span">Welcome</span>
+                    <h1 class="main__title ttl">
+                        <span class="ttl__span">I am a</span>
+                        <div class="message">
+                            <div class="word1">Xushnora</div>
+                            <div class="word2">Developer</div>
+                            <div class="word3">Creative</div>
+                        </div>
+                    </h1>
                     <p class="main__text">based in Tashkent, Uzbekistan.</p>
                     <a class="main__btn" href="#contact">hire me</a>
                     <div class="main__arrow">
@@ -129,11 +136,68 @@
                         </button>
                     </div>
                 </div>
+                <div id="about" class="about">
+                    <div class="container">
+                        <div class="about__page">
+                            <h2 class="about__title">Know Me More</h2>
+                            <div class="about__desc row ">
+                                <div class="col-sm-8 col-xs-12 about__me">
+                                    <div class="about__me-to me-to">
+                                        <h3 class="me-to__title">I'm <span class="me-to__x">Xushnora,</span> a Web Developer</h3>
+                                        <p class="me-to__text">I help you build brand for your business at an affordable
+                                            price. Thousands of clients have procured exceptional results while working
+                                            with our dedicated team. when an unknown printer took a galley of type and
+                                            scrambled it to make a type specimen book.
+                                            <br> <br>
+                                            Delivering work within time and budget which meets client's requirements is
+                                            our moto. Lorem Ipsum has been the industry's standard dummy text ever when
+                                            an unknown printer took a galley.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 col-xs-12 about__location location">
+                                    <ul class="location__list">
+                                        <li class="location__item">
+                                            <span class="location__span">Name: <p class="location__name">Xushnora</p>
+                                                </span>
+                                        </li>
+                                        <li class="location__item">
+                                            <span class="location__span">Email: <a class="location__name link-mail"
+                                                    href="xushnoranishonova@gmail.com">xushnoranishonova@gmail.com</a></span>
+                                        </li>
+                                        <li class="location__item">
+                                            <span class="location__span">Age: <p class="location__name">19</p></span>
+                                        </li>
+                                        <li class="location__item">
+                                            <span class="location__span">From: <p class="location__name">Tashkent,
+                                                    Uzbekistan</p></span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
+
     <script src="js/main.js"></script>
+
+    <!-- <script src="./js/typed.js"></script>
+    <script>
+        var typed = new Typed('.ttl__span', {
+            strings: [
+                "Xushnora",
+                "Developer",
+                "Frelanser"
+            ],
+            typeSpeed: 50,
+            backSpeed: 50,
+            loop: true
+        });
+    </script> -->
 </body>
 
 </html>
