--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 </div>
                 <div class="main__desc">
                     <span class="main__span">Welcome</span>
+                    <!-- SH -->
                     <h1 class="main__title ttl">
                         <span class="ttl__span">I am a</span>
                         <div class="message">
@@ -139,11 +140,13 @@
                 <div id="about" class="about">
                     <div class="container">
                         <div class="about__page">
+                            <p class="about__big-title">ABOUT ME</p>
                             <h2 class="about__title">Know Me More</h2>
-                            <div class="about__desc row ">
+                            <div class="about__desc">
                                 <div class="col-sm-8 col-xs-12 about__me">
                                     <div class="about__me-to me-to">
-                                        <h3 class="me-to__title">I'm <span class="me-to__x">Xushnora,</span> a Web Developer</h3>
+                                        <h3 class="me-to__title">I'm <span class="me-to__x">Xushnora,</span> a Web
+                                            Developer</h3>
                                         <p class="me-to__text">I help you build brand for your business at an affordable
                                             price. Thousands of clients have procured exceptional results while working
                                             with our dedicated team. when an unknown printer took a galley of type and
@@ -159,7 +162,7 @@
                                     <ul class="location__list">
                                         <li class="location__item">
                                             <span class="location__span">Name: <p class="location__name">Xushnora</p>
-                                                </span>
+                                            </span>
                                         </li>
                                         <li class="location__item">
                                             <span class="location__span">Email: <a class="location__name link-mail"
@@ -173,15 +176,187 @@
                                                     Uzbekistan</p></span>
                                         </li>
                                     </ul>
+                                    <a class="location__btn" href="#contact">contact me</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="portfolio" class="portfolio">
+                    <div class="portfolio__page">
+                        <p class="about__big-title">portfolio</p>
+                        <h2 class="portfolio__title about__title">My Work</h2>
+                        <ul class="portfolio__list row">
+                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                                <div class="portfolio__hover">
+                                    <a class="portfolio__link" href="#">
+                                    <div class="portfolio__img"></div>
+                                    <div class="portfolio__colors"></div>
+                                    <div class="portfolio__links-box">
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-netlify mini-link'></i>
+                                        </a>
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-github mini-link'></i>
+                                        </a>
+                                    </div>
+                                </a>
+                                </div>
+                            </li>
+                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                                <div class="portfolio__hover">
+                                    <a class="portfolio__link" href="#">
+                                    <div class="portfolio__img"></div>
+                                    <div class="portfolio__colors"></div>
+                                    <div class="portfolio__links-box">
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-netlify mini-link'></i>
+                                        </a>
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-github mini-link'></i>
+                                        </a>
+                                    </div>
+                                </a>
+                                </div>
+                            </li>
+                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                                <div class="portfolio__hover">
+                                    <a class="portfolio__link" href="#">
+                                    <div class="portfolio__img"></div>
+                                    <div class="portfolio__colors"></div>
+                                    <div class="portfolio__links-box">
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-netlify mini-link'></i>
+                                        </a>
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-github mini-link'></i>
+                                        </a>
+                                    </div>
+                                </a>
+                                </div>
+                            </li>
+                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                                <div class="portfolio__hover">
+                                    <a class="portfolio__link" href="#">
+                                    <div class="portfolio__img"></div>
+                                    <div class="portfolio__colors"></div>
+                                    <div class="portfolio__links-box">
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-netlify mini-link'></i>
+                                        </a>
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-github mini-link'></i>
+                                        </a>
+                                    </div>
+                                </a>
+                                </div>
+                            </li>
+                            <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                                <div class="portfolio__hover">
+                                    <a class="portfolio__link" href="#">
+                                    <div class="portfolio__img"></div>
+                                    <div class="portfolio__colors"></div>
+                                    <div class="portfolio__links-box">
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-netlify mini-link'></i>
+                                        </a>
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-github mini-link'></i>
+                                        </a>
+                                    </div>
+                                </a>
+                                </div>
+                            </li>
+                             <li class="portfolio__item col-md-4 col-sm-6 col-xs-12">
+                                <div class="portfolio__hover">
+                                    <a class="portfolio__link" href="#">
+                                    <div class="portfolio__img"></div>
+                                    <div class="portfolio__colors"></div>
+                                    <div class="portfolio__links-box">
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-netlify mini-link'></i>
+                                        </a>
+                                        <a class="portfolio__icon" href="#">
+                                            <i class='bx bxl-github mini-link'></i>
+                                        </a>
+                                    </div>
+                                </a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div id="contact" class="contact">
+                    <div class="container">
+                        <div class="contact__page">
+                            <p class="about__big-title">Contact</p>
+                            <h2 class="about__title contact__title">Get in Touch</h2>
+                            <div class="contact__row">
+                                <div class="col-sm-4 col-xs-12">
+                                    <div class="contact__desc adress">
+                                        <h3 class="adress__title">ADDRESS</h3>
+                                        <p class="adress__text">4th Floor, Plot No.22, <br>
+                                            145 Murphy Canyon Rd. <br>
+                                            San Diego CA 2028</p>
+                                        <a class="adress__tel" href="tel:998338701201"><i class='bx bxs-phone bx-rotate-270'></i> (998) 870
+                                            12 01</a>
+                                        <a class="adress__tel" href="xushnoranishonova@gmail.com"><i
+                                                class='bx bx-mail-send'></i>xushnoranishonova@gmail.com</a>
+                                    </div>
+                                    <div class="contact__follow follow">
+                                        <h3 class="follow__title">Follow me</h3>
+                                        <ul class="follow__list">
+                                            <li class="follow__item">
+                                                <a class="follow__link" href="https://facebook.com/xushnora.nishonova.1/"
+                                                    target="_blank">
+                                                    <i class='bx bxl-facebook follow-bx'></i>
+                                                </a>
+                                            </li>
+                                            <li class="follow__item">
+                                                <a class="follow__link" href="https://instagram.com/xushnora_uz/" target="_blank">
+                                                    <i class='bx bxl-instagram-alt follow-bx' ></i>
+                                                </a>
+                                            </li>
+                                            <li class="follow__item">
+                                                <a class="follow__link" href="https://t.me/Xushnora_uz" target="_blank">
+                                                    <i class='bx bxl-telegram follow-bx'></i>
+                                                </a>
+                                            </li>
+                                            <li class="follow__item">
+                                                <a class="follow__link" href="https://linkedin.com/feed/" target="_blank">
+                                                    <i class='bx bxl-linkedin follow-bx'></i>
+                                                </a>
+                                            </li>
+                                            <li class="follow__item">
+                                                <a class="follow__link" href="https://github.com/Xushnora" target="_blank">
+                                                    <i class='bx bxl-github follow-bx'></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-sm-8 col-xs-12 forms">
+                                    <form class="form__page">
+                                        <h3 class="form__title">SEND US A NOTE</h3>
+                                        <div class="form__input-box">
+                                            <input class="form__input" type="text" name="name" id="name" placeholder="Name" required>
+                                            <input class="form__input" type="email" name="email" id="email" placeholder="Email" required>
+                                        </div>
+                                        <textarea class="form__area" name="taxt" id="text" cols="30" rows="5" placeholder="Tell us more about your needs ..." required></textarea>
+                                        <button class="form__btn" type="submit">Send massage</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="go-top">
+                <a class="go-link" href="#"><i class='bx bx-chevrons-up'></i>
+                    <i class='bx bx-chevrons-up'></i></a>
+            </div>
         </div>
     </section>
-
 
     <script src="js/main.js"></script>
 
