--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
@@ -209,10 +209,10 @@
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
@@ -225,10 +225,10 @@
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
@@ -241,10 +241,10 @@
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
@@ -257,10 +257,10 @@
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
@@ -273,10 +273,10 @@
                                     <div class="portfolio__img"></div>
                                     <div class="portfolio__colors"></div>
                                     <div class="portfolio__links-box">
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://app.netlify.com/teams/xushnora/overview">
                                             <i class='bx bxl-netlify mini-link'></i>
                                         </a>
-                                        <a class="portfolio__icon" href="#">
+                                        <a class="portfolio__icon" href="https://github.com/Xushnora">
                                             <i class='bx bxl-github mini-link'></i>
                                         </a>
                                     </div>
